force-app/main/default/objects/Conversion__c/Conversion__c.object-meta.xml
<CustomObject>
    <description>Object to track lead to MQL to SQL to SAL across leads, contacts and opportunities</description>
    <label>Conversion</label>
    <nameField>
        <displayFormat>CONV-{0000}</displayFormat>
        <label>Conversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>