force-app/main/default/objects/Conversion__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account this conversion is related to</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conversions</relationshipLabel>
    <relationshipName>Conversions</relationshipName>
    <type>Lookup</type>
</CustomField>