force-app/main/default/objects/Conversion__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact this conversion is related to</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conversions</relationshipLabel>
    <relationshipName>Conversions</relationshipName>
    <type>Lookup</type>
</CustomField>