force-app/main/default/objects/Conversion__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead this conversion originated</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Conversions</relationshipLabel>
    <relationshipName>Conversions</relationshipName>
    <type>Lookup</type>
</CustomField>