force-app/main/default/objects/Conversion__c/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <formula>IF(ISBLANK(MQL_Date__c),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>