force-app/main/default/objects/Conversion__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity associated to this Conversion</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Conversions</relationshipLabel>
    <relationshipName>Conversions</relationshipName>
    <type>Lookup</type>
</CustomField>