force-app/main/default/objects/Conversion__c/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>