force-app/main/default/objects/Conversion__c/fields/SAL__c.field-meta.xml
<CustomField>
    <fullName>SAL__c</fullName>
    <formula>IF(ISBLANK(SAL_Date__c),False,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAL</label>
    <type>Checkbox</type>
</CustomField>