force-app/main/default/objects/Conversion__c/fields/SQL__c.field-meta.xml
<CustomField>
    <fullName>SQL__c</fullName>
    <formula>IF(ISBLANK(SQL_Date__c),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SQL</label>
    <type>Checkbox</type>
</CustomField>